--- a/android-dialogs/build.gradle
+++ b/android-dialogs/build.gradle
@@ -34,11 +34,11 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled false
+            // minifyEnabled false
         }
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // minifyEnabled false
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
