--- a/android-commons/build.gradle
+++ b/android-commons/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile 'com.google.guava:guava:19.0'
     // intellij annotations
     compile 'com.intellij:annotations:12.0'
+    compile 'commons-codec:commons-codec:1.15'
 
 
 }
